[package]
name = "hermit-entry"
version = "0.10.5"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2024"
description = "Hermit's loading and entry API."
repository = "https://github.com/hermitcore/hermit-entry"
license = "MIT OR Apache-2.0"
keywords = ["hermit", "unikernel"]
categories = ["api-bindings", "no-std", "virtualization"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-none"
targets = [
    "x86_64-unknown-none",
    "aarch64-unknown-none-softfloat",
    "riscv64imac-unknown-none-elf",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
align-address = "0.3"
allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
compression = { version = "0.1", default-features = false, features = ["gzip"], optional = true }
const_parse = "1"
goblin = { version = "0.10", default-features = false, features = ["elf64"], optional = true }
log = { version = "0.4", optional = true }
num-traits = { version = "0.2", default-features = false }
plain = { version = "0.2", optional = true }
time = { version = "0.3", default-features = false }
uhyve-interface = "0.1"
yoke = { version = "0.8", default-features = false, features = ["derive"] }

[dependencies.byte-unit]
version = "5"
default-features = false
features = ["byte", "serde"]
optional = true

[dependencies.serde]
version = "1"
default-features = false
features = ["alloc", "derive"]
optional = true

[dependencies.toml]
version = "0.9"
default-features = false
features = ["parse", "serde"]
optional = true

[dev-dependencies]
proptest = "1.9"

[features]
default = []
std = ["compression/std"]
allocator-api2 = ["dep:allocator-api2"]
loader = ["config", "dep:compression", "dep:log", "dep:goblin", "dep:plain"]
kernel = []
config = ["dep:byte-unit", "dep:serde", "dep:toml"]
