[package]
name = "hermit-entry"
version = "0.10.7"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2024"
description = "Hermit's loading and entry API."
repository = "https://github.com/hermitcore/hermit-entry"
license = "MIT OR Apache-2.0"
keywords = ["hermit", "unikernel"]
categories = ["api-bindings", "no-std", "virtualization"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-none"
targets = [
    "x86_64-unknown-none",
    "aarch64-unknown-none-softfloat",
    "riscv64imac-unknown-none-elf",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
align-address = "0.3"
allocator-api2 = { version = "0.3",  optional = true, default-features = false, features = ["alloc"] }
byte-unit =      { version = "5",    optional = true, default-features = false, features = ["byte", "serde"] }
compression =    { version = "0.1",  optional = true, default-features = false, features = ["gzip"] }
const_parse = "1"
goblin =         { version = "0.10", optional = true, default-features = false, features = ["elf64"] }
log =            { version = "0.4",  optional = true }
plain =          { version = "0.2",  optional = true }
serde =          { version = "1",    optional = true, default-features = false, features = ["alloc", "derive"] }
tar-no-std =     { version = "0.4",  optional = true, features = ["alloc"] }
time =           { version = "0.3",  default-features = false }
toml =           { version = "0.9",  optional = true, default-features = false, features = ["parse", "serde"] }

[features]
default = []
allocator-api2 = ["dep:allocator-api2"]
config = ["dep:byte-unit", "dep:serde", "dep:tar-no-std", "dep:toml"]
loader = ["config", "dep:compression", "dep:log", "dep:goblin", "dep:plain"]
kernel = []

[[test]]
name = "macros"
required-features = ["kernel"]
