[package]
name = "hermit-entry"
version = "0.10.8"
authors = ["The Hermit Project Developers"]
edition = "2024"
description = "Hermit's loading and entry API."
repository = "https://github.com/hermit-os/hermit-entry"
license = "MIT OR Apache-2.0"
keywords = ["hermit", "unikernel"]
categories = ["api-bindings", "no-std", "virtualization"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-none"
targets = [
    "x86_64-unknown-none",
    "aarch64-unknown-none-softfloat",
    "riscv64imac-unknown-none-elf",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
align-address = "0.4"
byte-unit = { version = "5", optional = true, default-features = false, features = ["byte", "serde"] }
const_parse = "1"
goblin = { version = "0.10", optional = true, default-features = false, features = ["elf64"] }
log = { version = "0.4", optional = true }
plain = { version = "0.2", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["alloc", "derive"] }
tar-no-std = { version = "0.4", optional = true, features = ["alloc"] }
time = { version = "0.3", default-features = false }
toml = { version = "1", optional = true, default-features = false, features = ["parse", "serde"] }

[features]
default = []
loader = ["dep:byte-unit", "dep:log", "dep:goblin", "dep:plain", "dep:serde", "dep:tar-no-std", "dep:toml"]
kernel = []

[[test]]
name = "macros"
required-features = ["kernel"]
